--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-Testing
+<p>This is a simple gulp boilerplate to start a project. It is set up for SASS and ES6 as well as browser-sync.</p>
+<ol>
+  <li>Clone from github</li>
+  <li>Type npm install in the terminal</li>
+  <li>Type gulp watch</li>
+</ol>
+
+<p>Browser-sync will open a page on localhost:3000</p>
+
+
 <!-- build:js js/bundle.js -->
 <script src="js/custom.js"></script>
 <!-- endbuild -->
