--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+<h2>Simple Gulp boilerplate</h2>
 <p>This is a simple gulp boilerplate to start a project. It is set up for SASS and ES6 as well as browser-sync.</p>
 <ol>
   <li>Clone from github</li>
@@ -16,6 +17,7 @@
 </ol>
 
 <p>Browser-sync will open a page on localhost:3000</p>
+
 
 
 <!-- build:js js/bundle.js -->
